feat:add index book

--- a/RelationsApp/appsettings.json
+++ b/RelationsApp/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DEVELOPPER\\SQLEXPRESS;Database=BGSGUSA;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DEVELOPPER\\SQLEXPRESS;Database=BookP322;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
